# events_backend

./: .coverage  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  test.db
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_07a1fbc245740852___init___py.html  z_07a1fbc245740852_init_roles_admin_py.html  z_07a1fbc245740852_models_py.html  z_07a1fbc245740852_routes_py.html  z_07a1fbc245740852_schemas_py.html  z_149f20a9ddaf307e___init___py.html  z_149f20a9ddaf307e_models_py.html  z_149f20a9ddaf307e_routes_py.html  z_149f20a9ddaf307e_schemas_py.html  z_149f20a9ddaf307e_service_py.html  z_1869019cd0a3d29a___init___py.html  z_1869019cd0a3d29a_main_py.html  z_1869019cd0a3d29a_models_py.html  z_3823f2bc1d34c7cb___init___py.html  z_3823f2bc1d34c7cb_models_py.html  z_3823f2bc1d34c7cb_routes_py.html  z_3823f2bc1d34c7cb_schemas_py.html  z_72782515c1d6cfd5___init___py.html  z_72782515c1d6cfd5_services_py.html  z_9e418760947d4c5a___init___py.html  z_9e418760947d4c5a_repositories_py.html  z_c16018b68a8b33fc___init___py.html  z_c16018b68a8b33fc_repositories_py.html  z_dcd1677eb52b4983___init___py.html  z_dcd1677eb52b4983_event_services_py.html  z_dcd1677eb52b4983_session_services_py.html  z_df1acb497b9837a9___init___py.html  z_df1acb497b9837a9_event_repositories_py.html  z_df1acb497b9837a9_session_repositories_py.html  z_e1eabb5a23d5b43b___init___py.html  z_e1eabb5a23d5b43b_database_py.html  z_e1eabb5a23d5b43b_models_py.html  z_e1eabb5a23d5b43b_permissions_py.html  z_e1eabb5a23d5b43b_security_py.html  (+5 more)
migrations/: env.py
(+39 files in other folders)
